@@ -74,3 +74,16 @@ evolver.e <- function(graph, cats, niter=5,
         PACKAGE="igraph")
 }
                                                      
+evolver.de <- function(graph, cats, niter=5,
+                      sd=FALSE, norm=FALSE, cites=FALSE, expected=FALSE,
+                      error=TRUE, debug=numeric()) {
+  if (!is.igraph(graph)) {
+    stop("Not a graph object!")
+  }
+
+  .Call("R_igraph_evolver_de", graph, as.numeric(cats), as.numeric(niter),
+        as.logical(sd), as.logical(norm), as.logical(cites), as.logical(expected),
+        as.logical(error), as.numeric(debug),
+        PACKAGE="igraph")
+}
+                       
